# NNX

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  icp.yaml  osv-scanner.toml  package-lock.json  package.json  playwright.config.mjs
canisters/frontend/: Cargo.toml  README.md
canisters/frontend/public/: 404.html  base.css  index.html
canisters/frontend/public/map/: README.md
canisters/frontend/src/: lib.rs
canisters/frontend/web/: build-frontend-env.mjs  build-frontend.mjs  build-info.mjs
canisters/frontend/web/src/: main.js
canisters/frontend/web/test/: agent-query-backend.test.mjs  api-boundary-membership.test.mjs  app-shell.test.mjs  build-frontend-env.test.mjs  build-info.test.mjs  charts.test.mjs  data-sources-page.test.mjs  effective-followees.test.mjs  guarantee-status.test.mjs  historian-client.test.mjs  ic-query-facade.test.mjs  no-forbidden-wording.test.mjs  node-health-metrics.test.mjs  node-metrics-proxy-client.test.mjs  proposal-analysis-analyzers.test.mjs  proposal-analysis-metrics.test.mjs  proposal-analysis-parser.test.mjs  proposal-analysis-service.test.mjs  proposal-analysis-state.test.mjs  proposal-analysis-ui.test.mjs  proposal-card.test.mjs  proposal-fixtures.test.mjs  proposal-loader.test.mjs  query-normalizers.test.mjs  raw-registry-client.test.mjs  region-normalizer.test.mjs  request-cache.test.mjs  review-page.test.mjs  router.test.mjs  security.test.mjs  smoke-api-boundary-membership.test.mjs  subnet-globe.test.mjs  subnet-loader.test.mjs  theme.test.mjs  tokenomics-service.test.mjs  topic-generation.test.mjs  (+4 more)
(+137 files in other folders)
