[package]
name = "nnx-frontend"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-asset-certification = "3.2.0"
ic-http-certification = "3.2.0"
include_dir = { version = "0.7", features = ["glob"] }
